--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="https://i.imgur.com/EPNEfmP.png" width="20%" height="20%">
     <h2>Voltamos já</h2>
     <div>
-        <p>Visando melhorar nossos serviços estamos realizando uma manutenção em nosso fórum. Estaremos de volta em breve.</p>
+        <p>Visando melhorar nossos serviços estamos realizando uma manutenção em nosso site. Estaremos de volta em breve.</p>
         <p>Nossa <a href="https://loja.palaze.gg">loja</a> continua disponível normalmente.</p>
         <p>Acompanhe o andamento desta manutenção através do canal #status do nosso <a href="https://discord.gg/palaze">Discord</a>.</p>
         <p>— Equipe Palaze</p>
